RESOLVED FIXED123910
[Gtk][EFL] Fix build after r158759
https://bugs.webkit.org/show_bug.cgi?id=123910
Summary [Gtk][EFL] Fix build after r158759
Brendan Long
Reported 2013-11-06 12:02:27 PST
[Gtk] Fix build after r158759
Attachments
Patch (8.73 KB, patch)
2013-11-06 12:06 PST, Brendan Long
no flags
Patch (4.53 KB, patch)
2013-11-06 12:43 PST, Brendan Long
no flags
Patch (1.52 KB, patch)
2013-11-06 13:21 PST, Brendan Long
no flags
Brendan Long
Comment 1 2013-11-06 12:06:22 PST
Created attachment 216200 [details] Patch I also removed takeFocus(), which was removed from PageClient in r84064, and marked the remaining functions in GTK's PageClientImpl as OVERRIDE.
WebKit Commit Bot
Comment 2 2013-11-06 12:07:30 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Brendan Long
Comment 3 2013-11-06 12:43:36 PST
Created attachment 216206 [details] Patch I was asked to make this patch just fix the build, and handle the overriding in a separate one. I also fixed a similar problem with the EFL build.
Sergio Correia (qrwteyrutiyoup)
Comment 4 2013-11-06 13:11:41 PST
Comment on attachment 216206 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=216206&action=review > Source/WebKit2/UIProcess/DrawingAreaProxyImpl.cpp:-259 > - m_webPageProxy->flashBackingStoreUpdates(updateInfo.updateRects); You might want to remove the flashBackingStoreUpdates() call in UIProcess/CoordinatedGraphics/CoordinatedDrawingAreaProxy.cpp as well, in order to fix the EFL build.
Brendan Long
Comment 5 2013-11-06 13:21:14 PST
Created attachment 216213 [details] Patch Since the other patch is already committing, here's another one to finish fixing EFL.
Brendan Long
Comment 6 2013-11-06 13:24:17 PST
Or should I just replace the other patch?
Sergio Correia (qrwteyrutiyoup)
Comment 7 2013-11-06 13:28:15 PST
(In reply to comment #6) > Or should I just replace the other patch? Not sure, but since you are fixing it in another patch, maybe it would need a different bug #? Or maybe since it's just a build fix, you could even commit it unreviewed :)
Brendan Long
Comment 8 2013-11-06 13:29:44 PST
(In reply to comment #7) > (In reply to comment #6) > > Or should I just replace the other patch? > > Not sure, but since you are fixing it in another patch, maybe it would need a different bug #? Or maybe since it's just a build fix, you could even commit it unreviewed :) Can't multiple patches be committed on a single bug report? I can't commit it directly, not a committer yet (waiting on paperwork..).
WebKit Commit Bot
Comment 9 2013-11-06 13:29:55 PST
Comment on attachment 216206 [details] Patch Clearing flags on attachment: 216206 Committed r158782: <http://trac.webkit.org/changeset/158782>
Sergio Correia (qrwteyrutiyoup)
Comment 10 2013-11-06 13:32:00 PST
(In reply to comment #8) > (In reply to comment #7) > > (In reply to comment #6) > > > Or should I just replace the other patch? > > > > Not sure, but since you are fixing it in another patch, maybe it would need a different bug #? Or maybe since it's just a build fix, you could even commit it unreviewed :) > > Can't multiple patches be committed on a single bug report? > Good question. I'd think they couldn't, but I may be wrong; haven't tried that before. > I can't commit it directly, not a committer yet (waiting on paperwork..). Oh okay :)
Brendan Long
Comment 11 2013-11-06 14:56:28 PST
It looks like that EFL patch doesn't completely fix it, but it fixes the problem from r158759.
Sergio Correia (qrwteyrutiyoup)
Comment 12 2013-11-06 15:03:37 PST
(In reply to comment #11) > It looks like that EFL patch doesn't completely fix it, but it fixes the problem from r158759. Yup, this build break you are fixing is the one caused by r158759, but there was another caused by r158753 and fixed by r158792.
Gyuyoung Kim
Comment 13 2013-11-06 19:24:32 PST
Comment on attachment 216213 [details] Patch I checked this patch fixed a build break on EFL port. But, gtk port already fixed build breaks.
WebKit Commit Bot
Comment 14 2013-11-06 19:51:21 PST
Comment on attachment 216213 [details] Patch Clearing flags on attachment: 216213 Committed r158817: <http://trac.webkit.org/changeset/158817>
WebKit Commit Bot
Comment 15 2013-11-06 19:51:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.