[Gtk][EFL] Fix build after r158759 https://bugs.webkit.org/show_bug.cgi?id=123910

Patch by Brendan Long <b.long@cablelabs.com> on 2013-11-06
Reviewed by Gustavo Noronha Silva.

* UIProcess/API/gtk/PageClientImpl.cpp: Remove flashBackingStoreUpdates().
* UIProcess/API/gtk/PageClientImpl.h: Same.
* UIProcess/CoordinatedGraphics/WebView.cpp: Same.
* UIProcess/CoordinatedGraphics/WebView.h: Same.
* UIProcess/DrawingAreaProxyImpl.cpp:
(WebKit::DrawingAreaProxyImpl::incorporateUpdate): Don't call flashBackingStoreUpdates().

Canonical link: https://commits.webkit.org/142103@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158782 268f45cc-cd09-0410-ab3c-d52691b4dbfc